Some CSS overrides, adding an index template.

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -1,9 +1,19 @@
+// Typography
+$header-font-family: 'Noticia Text', Georgia, sans-serif
+
+// Top bar
+$topbar-bg: #555
+$topbar-height: 32px
+$topbar-link-color: #FAFAFA
+$topbar-link-color-hover: #FAFAFA
+$topbar-link-color-active: #FAFAFA
+
+
 @import foundation
 
 body
   margin: 0px
   font:
-    family: 'Noticia Text', Georgia, sans-serif
     size: 16px
 
 h1, h2, h3, h4, h5, h6
